fix: z-index for dashboardsbar shadow

--- a/src/components/ControlBar/ViewControlBar/styles/DashboardsBar.module.css
+++ b/src/components/ControlBar/ViewControlBar/styles/DashboardsBar.module.css
@@ -2,6 +2,7 @@
     position: relative;
     background-color: var(--colors-white);
     box-shadow: rgba(0, 0, 0, 0.2) 0 0 6px 3px;
+    z-index: 1;
     overflow: hidden;
     box-sizing: border-box;
     flex: none;
